docs: Add user onboarding storage key guidelines

--- a/docs/development/frontend/storage.mdx
+++ b/docs/development/frontend/storage.mdx
@@ -178,6 +178,11 @@ All storage keys should:
    - `form_draft`
    - `wizard_state`
 
+6. **User Onboarding**: `{feature}_completed` or `{feature}_cancelled`
+   - `walkthrough_completed`
+   - `tutorial_completed`
+   - `onboarding_skipped`
+
 ## Adding New Storage Values
 
 ### Step 1: Define Your Storage Key
