docs: update self-hosted documentation for Docker Compose setup and adjust storage requirements

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -33,7 +33,7 @@ DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MC
 
   <Card 
     icon={<Server />} 
-    href="/self-hosted" 
+    href="/self-hosted/quick-start"
     title="Self-Hosted DeployStack"
   >
     Host DeployStack on your own infrastructure for complete control and security
